@@ -16,6 +16,8 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     - Standalone ecpp creation fixed.
 
+    - Allow Ramanujan polynomials (D = 11 mod 24) for ECPP, reducing sizes.
+
 
 0.50 2017-11-28
 
